<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFAFA"
    tools:context=".activity.MenuActivity">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:background="#a0000000">
    <TextView
        android:id="@+id/Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuAcesso"
        android:textColor="#ffdd00"
        android:shadowColor="#00FF00"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1.2"
        android:textSize="35sp"/>
    </LinearLayout>


        <Button
            android:id="@+id/btcadastrar"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="300dp"
            android:onClick="telaCadastro"
            android:background="@drawable/s"/>

        <TextView
        android:id="@+id/cadastro"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="440dp"
        android:textColor="#FF0000"
        android:textSize="10sp"
        android:text="@string/cadastrar" />

        <Button
            android:id="@+id/btcadastrar2"
            android:layout_width="110dp"
            android:layout_height="140dp"
            android:layout_marginTop="80dp"
            android:onClick="telaCadastro2"
            android:background="@drawable/s"/>

        <TextView
        android:id="@+id/cadastro2"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="220dp"
        android:textColor="#FF0000"
        android:textSize="10sp"
        android:text="@string/cadastrar2" />


    <TextView
        android:id="@+id/produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="220dp"
        android:text="@string/produto"
        android:textColor="#FF0000"
        android:textSize="10sp" />

    <Button
        android:id="@+id/btproduto"
        android:layout_width="110dp"
        android:layout_height="140dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:onClick="telaProduto"
        android:background="@drawable/s"/>

    <TextView
        android:id="@+id/pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produto"
        android:layout_alignParentRight="true"
        android:layout_marginTop="215dp"
        android:text="@string/pedido"
        android:textColor="#FF0000"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/btpedido"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_below="@+id/btproduto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:onClick="telaPedido"
        android:background="@drawable/s"/>

    <Button
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:text=""
        android:background="@drawable/priva"
        android:id="@+id/btPolitica"
        android:onClick="rtnPolitica"
        android:layout_below="@+id/btcadastrar"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
